--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -16,6 +16,7 @@
 .icons-container svg {
   border-radius: 10%;
   box-shadow: 1px 1px 3px 0px #d5d5d5;
+  display: block;
   height: 5.4rem;
   margin: 0.94rem 0.63rem;
   position: relative;
@@ -40,4 +41,15 @@
   transform: translate(-0.43rem, 0.37rem);
   width: 0.62rem;
   z-index: 1;
+}
+
+@media (max-width: 480px) {
+  .icons-container {
+    justify-content: space-around;
+  }
+
+  .icons-container svg {
+    height: 4rem;
+    width: 4rem;
+  }
 }
